<resources>
    <string name="app_name">AirQualityTracker</string>
    <string name="get_started">Get started!</string>
    <string name="my_city">My City</string>
    <string name="get_location_text">Let Air Quality Tracker access your
        location to provide</string>
    <string name="find_my_location">Find my location</string>
    <string name="skip_find_location"><u>skip</u></string>
    <!-- TODO Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>
    <string name="aqt">AQT</string>
    <string name="rank">Rank</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sign_in">Sign in</string>

    <!-- Setting menu values-->
    <string name="places">Places</string>
    <string name="manage_places">Manage places</string>

    <!-- User preferences -->
    <string name="user_preferences">User preferences</string>
    <string name="aqi_index">AQT Index</string>
    <!-- aqi index choice -->
    <string name="us_aqi_index">US AQI</string>
    <string name="cn_aqi_index">CN AQI</string>
    <string name="unit_system">Unit system</string>
    <!-- unit system choice -->
    <string name="metric">Metric(Celsius, milibar, kilometer)</string>
    <string name="imperial">Imperial(Fahrenheit, Hg, miles)</string>

    <string name="system_permissions">System permissions</string>
    <!-- Notifications -->
    <string name="smart_notifications">Smart notifications</string>
    <string name="smart_notifications_more_info">Receive pollution alerts and recommendations when the air
     quality is improving or getting worse for your health</string>
    <string name="receive_smart_notifications">Receive Smart notifications</string>
    <string name="daily_report">Daily report</string>

    <!-- Support -->
    <string name="support">Support</string>
    <string name="about_text">Created for Mobile App Development 2021</string>
    <string name="help_text">Add a location from the search tab or by using your location in the map tab. You can drag locations to change their order and swipe left or right to delete them.</string>
    <string name="terms_of_use">Terms Of Use and Privacy Policy</string>s

    <!-- Card -->
    <string name="celsius_symbol">°C</string>
    <string name="fahrenheit_symbol">°F</string>
    <string name="airspeed_ms">m/s</string>
    <string name="humidity">%</string>

    <!-- Card Quality Assessment -->
    <string name="quality_assessment_0">Good</string>
    <string name="quality_assessment_1">Moderate</string>
    <string name="quality_assessment_2">Unhealthy for Sensitive Groups</string>
    <string name="quality_assessment_3">Unhealthy</string>
    <string name="quality_assessment_4">Very Unhealthy</string>
    <string name="quality_assessment_5">Hazardous</string>

    <!-- Card Placeholders -->
    <string name="location_city_placeholder">City</string>
    <string name="location_state_country_placeholder">State, Country</string>
    <string name="quality_indicator_placeholder">AQI</string>
    <string name="quality_assessment_placeholder">Quality</string>

    <string name="temperature_placeholder">Temp</string>
    <string name="windspeed_placeholder">Wind</string>
    <string name="humidity_placeholder">Hum</string>

    <!-- Card Image Descriptions -->
    <string name="face_image_description">Quality of Air Face</string>
    <string name="temperature_image_description">Temperature Icon</string>
    <string name="windspeed_image_description">WindSpeed Icon</string>
    <string name="humidity_image_description">Humidity Icon</string>
    <string name="aqt_card_icon_description">AQT Icon</string>
    <string name="snackbar_card_deleted">Location deleted</string>
    <string name="snackbar_card_added">Location added. Check Home</string>
    <string name="snackbar_card_undo">Undo</string>
    <string name="about">About</string>
    <string name="submit">Submit</string>
    <string name="city_or_place">City or Place</string>


</resources>