<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".submenuFragments.SettingsListFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:scrollbars="none"
        >
    <TableLayout
        android:id="@+id/settingsFragmentList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings"
            />

        <!-- Places -->
        <TableRow
            android:id="@+id/places"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/places"
                android:textSize="15sp" />

        </TableRow>



        <!-- Manage plalces -->
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp"
            >

           <TextView
                android:id="@+id/managePlaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:state_pressed="true"
                android:color="#3A8969"
                android:text="@string/manage_places"
                android:textSize="20sp" />

        </TableRow>


        <!-- User preferences -->
        <TableRow
            android:id="@+id/userPreferencesCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/user_preferences"
                android:textSize="15sp" />

        </TableRow>
        <!-- Aqi Index -->
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/aqiIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/aqi_index"
                android:textSize="20sp"
                />

        </TableRow>

        <!-- aqi index info -->
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="30dp">

            <TextView
                android:id="@+id/aqiIndexInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="12sp"
                />

        </TableRow>
         <!-- Unit System -->
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/unitSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/unit_system"
                android:textSize="20sp"
                />
        </TableRow>
          <!-- unit system info -->
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="30dp">

            <TextView
                android:id="@+id/unitSystemInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="12sp"
                />

        </TableRow>
        <!-- System Permissions -->
        <TableRow
            android:id="@+id/systemPermissions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/system_permissions"
                android:textSize="20sp" />
        </TableRow>


        <!-- Notifications-->
        <TableRow
            android:id="@+id/notifictionsCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/notifications"
                android:textSize="15sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/smartNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:breakStrategy="balanced"
                android:autoSizeMaxTextSize="24sp"
                android:autoSizeMinTextSize="12sp"
                android:clickable="true"
                android:text="@string/smart_notifications"
                android:textSize="20sp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"

                />
        </TableRow>
<!-- smart notifications more info -->
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="30dp">

            <TextView
                android:id="@+id/smartNotificationsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smart_notifications_more_info"
                android:textSize="12sp"
                />

        </TableRow>

        <TableRow
            android:id="@+id/dailyReport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/daily_report"
                android:textSize="20sp"
                android:onClick="applyDailyReport"/>
        </TableRow>
        <!-- Support-->
        <TableRow
            android:id="@+id/supportCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="15sp"
                android:text="@string/support"
                />
        </TableRow>

        <TableRow
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/help"
                android:textSize="20sp"
                android:onClick="showHelp"/>
        </TableRow>

        <TableRow
            android:id="@+id/aboutAqt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:textSize="20sp"
                android:text="@string/about"
                android:onClick="showAbout"/>
        </TableRow>

        <TableRow
            android:id="@+id/termsOfUse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:textSize="20sp"
                android:text="@string/terms_of_use"
                android:onClick="showTermsOfUse"/>
        </TableRow>







    </TableLayout>
    </ScrollView>
</FrameLayout>