<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".submenuFragments.SettingsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_weight="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings"
            />
        <!-- Places -->
        <TableRow
            android:id="@+id/places"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/places"
                android:textSize="15sp" />

        </TableRow>



   <!-- Manage plalces -->
        <TableRow
            android:id="@+id/managePlacesCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="managePlaces"
                android:text="@string/manage_places"
                android:textSize="20sp" />
        </TableRow>


        <!-- User preferences -->
        <TableRow
            android:id="@+id/userPreferencesCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/user_preferences"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/aqtIndex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/aqt_index"
                android:textSize="20sp"
                android:onClick="changeAqtIndex"/>
        </TableRow>

        <TableRow
            android:id="@+id/unitSystem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/unit_system"
                android:textSize="20sp"
                android:onClick="changeUnitSystem"/>
        </TableRow>

        <TableRow
            android:id="@+id/systemPermissions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/system_permissions"
                android:textSize="20sp"
                android:onClick="changeSystemPermissions"/>
        </TableRow>


        <!-- Notifications-->
        <TableRow
            android:id="@+id/notifictionsCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/notifications"
                android:textSize="15sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/smartNotifications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/smart_notifications"
                android:textSize="20sp"
                android:onClick="applySmartNotifications"/>
        </TableRow>

        <TableRow
            android:id="@+id/dailyReport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/daily_report"
                android:textSize="20sp"
                android:onClick="applyDailyReport"/>
        </TableRow>
      <!-- Support-->
        <TableRow
            android:id="@+id/supportCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="15sp"
                android:text="@string/support"
                />
        </TableRow>

        <TableRow
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:text="@string/help"
                android:textSize="20sp"
                android:onClick="showHelp"/>
        </TableRow>

        <TableRow
            android:id="@+id/aboutAqt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:textSize="20sp"
                android:text="@string/about_aqt"
                android:onClick="showAbout"/>
        </TableRow>

        <TableRow
            android:id="@+id/termsOfUse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:textSize="20sp"
                android:text="@string/terms_of_use"
                android:onClick="showTermsOfUse"/>
        </TableRow>







    </TableLayout>

    </ScrollView>
</FrameLayout>