<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".LogIn">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_email_24"></ImageView>

            <EditText
                android:id="@+id/editTextEmailRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"></EditText>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"

            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_person_24"></ImageView>

            <EditText
                android:id="@+id/editTextUsernameRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"

            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_vpn_key_24"></ImageView>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextPasswordRegister"
                android:hint="@string/enter_password"></EditText>
        </LinearLayout>


        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/register"
            android:onClick="editNewAccount" />





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>